Version 1.6.7
-------------

- Add Automatic-Module-Name to manifest so we have basic Java 9 support.

Version 1.6.6
-------------

- Attempt to unregister async/buffer shutdown hooks when connection is closed. (thanks obourgain)

Version 1.6.5
-------------

- Implemented Serializable for DebugImage, fixes buffering with Proguard symbols.
- Use default DSN when empty string is provided. (thanks afking)

Version 1.6.4
-------------

- Add web-fragment.xml to prevent classpath scanning.
- Update Android Gradle plugin to use new NPM package if available.

Version 1.6.3
-------------

- Fix issue where Gradle tasks were not created. (thanks szymanskip)

Version 1.6.2
-------------

- Handle multi-APK projects with different version codes.

Version 1.6.1
-------------

- Don't throw a ConnectionException if an event is filtered by the Sentry server (HTTP 403).

Version 1.6.0
-------------

- Add transaction field to Event and EventBuilder.
- Deprecate culprits in favor of transactions.
- Culprit is no longer set automatically in logging integrations.

Version 1.5.6
-------------

- Add ``in_app`` frame blacklist regex list to skip CGLIB generated classes in Spring.

Version 1.5.5
-------------

- Fix crash on Android API < 16. (thanks Syhids)

Version 1.5.4
-------------

- Change ``EventBuilder$HostnameCache`` timeout to only log at debug level.

Version 1.5.3
-------------

- Cleanup SentryEnvironment state to avoid memory leak warnings on Tomcat.
- Fix for buffering Events to disk that have null values in their extras map.

Version 1.5.2
-------------

- Add ability to remove individual tags or extra data from the context, or clear them entirely.

Version 1.5.1
-------------

- Don't attempt to serialize Iterables and don't special case serialization for Path objects, fixes broken Android release.

Version 1.5.0
-------------

- Reduce logging noise if JNDI is missing.
- Add OSGi support. (thanks markwoon)
- Local variable agent beta.

Version 1.4.0
-------------
