@@ -2,6 +2,7 @@ Version 1.6.7
 -------------
 
 - Add Automatic-Module-Name to manifest so we have basic Java 9 support.
+- Print unhandled exceptions to stderr by default (like ThreadGroup does).
 
 Version 1.6.6
 -------------
